feat: update to CC: Tweaked 1.115.1
* # Update Plethora to CC:Tweaked version 1.115.1 minecraft 1.20.1

Usually assemble my own modpacks, I hate not having Plethora around but am using CC:Tweaked 1.115.1 for compatibility between other mods. These changes update Plethora to 1.115.1

## KeyboardModuleItem
- updated `useOnComputer` to use the new CC:Tweaked paradigm for opening a menu.
- changed `isComputerUsableWithRange` check due to `CommandComputerBlockEntity` being removed

## KeyboardScreenHandlerFactory
- minor change to `CreateMenu` to match new signature of `ComputerMenuWithoutInventory`

## MediaItemMeta
- This one was hard with `MediaProviders` being removed. Attempt to cast to `IMedia`, if not cast to new `RecordMedia` Instance.
- note: I'm not entirely sure how to test this or what hits this code. I'd be happy to test if anyone has a scenario for me.

## NeuralComputer
- Change to match `SeverComputer` signature change
- level and position are private, calls set position instead.

## NeuralPocketAccess
- `getLevel` is now required to implement this interface
- `getPosition` is now required to implement this interface
- `getUpgrades` has been deprecated I noticed it returned empty anyway
- implemented `setUpgrade` and `getUpgrade` but I'm not sure they do anything/should be. Feedback on this is appreciated.
- changed upgrades return to `Map.of()` so we don't need `Collections` import

## PocketUpgradeModule
- changed upgrade check as `getUpgrades` is deprecated.

* # Update Plethora to CC:Tweaked version 1.115.1 minecraft 1.20.1

## KeyboardModuleItem
- changed `isComputerUsableWithRange` check to check if blockEntity is not usable by player.

* Update src/main/java/io/sc3/plethora/integration/computercraft/meta/item/MediaItemMeta.kt

Yeah! this one confused me for a second, but this looks way better. I was worried about what would happen if the else branch was executed.

Co-authored-by: Jonathan Coates <git@squiddev.cc>

* Update build.gradle.kts

Tha